--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
 
 
 <body>
-    <img src="SUNGYUNG MEDIA LOGO.png" alt="성영미디어" width=15% title="성영미디어">
+    <a href="1.html"><img src="SUNGYUNG MEDIA LOGO.png" alt="성영미디어" width=15% title="성영미디어"></a>
   <h1><a href="1.html">성영미디어</a></h1>
 
   <ul>
