--- a/1.html
+++ b/1.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="SUNGYUNG MEDIA LOGO.png" alt="성영미디어" width=15% title="성영미디어">
+    <a href="1.html"><img src="SUNGYUNG MEDIA LOGO.png" alt="성영미디어" width=15% title="성영미디어"></a>
   <h1><a href="1.html">성영미디어</a></h1>
   <ul>
     <li><a href="1.html">ABOUT US</a></li>
