--- a/4.html
+++ b/4.html
@@ -19,13 +19,11 @@
 
   <h3>CONTACT</h3>
   <p>
-  특별한 기획과 추억을 영상으로 만들어 보세요
+    <성영미디어> <br>
+    ■ 이메일 : sungyungmedia@gmail.com <br>
+    ■ 카카오톡 : sungyungmedia@gmail.com <br>
+    ■ 전화 : 010-0000-0000 <br>
   </p>
-  <form class="" action="http://localhost/login.php">
-    <p> ▶ 이름 : <input type="text" name="이름" value="홍길동"></p>
-    <p> ▶ 연락처 : <input type="text" name="연락처" value="010-1234-5678"></p>
-    <p> ▶ 요청사항 :<textarea name="요청사항" rows="8" cols="80">작업 종류 및 관련 내용을 최대한 상세하게 기재해 주세요^^</textarea> </p>
-    <p><input type="submit" name="제출"></p>
   </form>
 </body>
 </html>
