--- a/3.html
+++ b/3.html
@@ -18,9 +18,6 @@
   </ul>
 
   <h3>WORK SCOPE</h3>
-  <p>
-  특별한 기획과 추억을 영상으로 만들어 보세요
-  </p>
   <table border="2">
     <thead>
      <tr>
@@ -44,5 +41,57 @@
       </tr>
     </tfoot>
   </table>
+  <p>
+  특별한 기획과 추억을 영상으로 만들어 보세요 <br>
+  </p>
+  <p>
+    [견적 의뢰]
+  </p>
+  <form action="http://localhost/login.php">
+    <p> <label for="이름"> ▶ 이름</label> : <input id="이름" type="text" name="이름" value="홍길동"></p>
+    <p> <label for="연락처"> ▶ 연락처</label> : <input id="연락처"  type="text" name="연락처" value="010-1234-5678"></p>
+    <p> ▶ 작업 선택 :
+      <select name="작업물">
+        <option value="영상 제작">영상 제작</option>
+        <option value="영상 편집">영상 편집</option>
+        <option value="웹페이지 제작">웹페이지 제작</option>
+      </select>
+    </p>
+    <p> ▶ 요청 수준 <br>
+      <label>
+        기본 상담 <input type="radio" name="요청 수준" value="기본 상담" checked>
+      </label>
+      <label>
+        / 자체 기획 <input type="radio" name="요청 수준" value="자체 기획">
+      </label>
+      <label>
+        / 일괄 의뢰 <input type="radio" name="요청 수준" value="일괄 의뢰">
+      </label>
+    </p>
+    <p> ▶ 예산 <br>
+      <label>
+      100만원 이하 <input type="radio" name="예산" value="100만원 이하" checked>
+      </label>
+      <label>
+      / 100~300만원 <input type="radio" name="예산" value="100~300만원">
+      </label>
+      <label>
+      / 300만원 이상 <input type="radio" name="예산" value="300만원 이상">
+      </label>
+    </p>
+    <p> ▶ 영상 목적(다중 선택 가능) <br>
+      행사용 <input type="checkbox" name="예산" value="100만원 이하">
+      / 광고|켐페인 <input type="checkbox" name="예산" value="100~300만원">
+      / 영화|드라마|뮤직비디오 <input type="checkbox" name="예산" value="300만원 이상">
+    </p>
+    <p>
+      <label>
+        ▶ 기타 요청 사항 :<textarea name="요청사항" rows="8" cols="80">요청 작업 관련 내용을 최대한 상세하게 기재해 주세요^^</textarea> </p>
+      </label>
+    <p>
+      <input type="hidden" name="hide" value="견적 의뢰">
+      <input type="submit" name="제출" value="견적 의뢰">
+      <input type="reset" name="초기화" value="선택 초기화">
+    </p>
 </body>
 </html>
