--- a/3.html
+++ b/3.html
@@ -86,7 +86,8 @@
     </p>
     <p>
       <label>
-        ▶ 기타 요청 사항 :<textarea name="요청사항" rows="8" cols="80">요청 작업 관련 내용을 최대한 상세하게 기재해 주세요^^</textarea> </p>
+        ▶ 기타 요청 사항 :<br>
+        <textarea name="요청사항" rows="8" cols="80">요청 작업 관련 내용을 최대한 상세하게 기재해 주세요^^</textarea> </p>
       </label>
     <p>
       <input type="hidden" name="hide" value="견적 의뢰">
