--- a/3.html
+++ b/3.html
@@ -81,9 +81,11 @@
       </label>
     </p>
     <p> ▶ 영상 목적(다중 선택 가능) <br>
-      행사용 <input type="checkbox" name="예산" value="100만원 이하">
-      / 광고|켐페인 <input type="checkbox" name="예산" value="100~300만원">
-      / 영화|드라마|뮤직비디오 <input type="checkbox" name="예산" value="300만원 이상">
+      행사 <input type="checkbox" name="영상 목적" value="행사">
+      / 광고 <input type="checkbox" name="영상 목적" value="광고">
+      / 켐페인 <input type="checkbox" name="영상 목적" value="켐페인">
+      / 영화 & 드라마 <input type="checkbox" name="영상 목적" value="영화 & 드라마">
+      / 뮤직비디오 <input type="checkbox" name="영상 목적" value="뮤직비디오">
     </p>
     <p>
       <label>
