--- a/2.html
+++ b/2.html
@@ -4,18 +4,22 @@
   <title>SUNGYUNG MEDIA</title>
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS.css">
 </head>
 
 
 <body>
     <a href="1.html"><img src="SUNGYUNG MEDIA LOGO.png" alt="성영미디어" width=15% title="성영미디어"></a>
-  <h1><a href="1.html">성영미디어</a></h1>
-
-  <ul>
-    <li><a href="1.html">ABOUT US</a></li>
-    <li><a href="2.html">REFERENCE</a></li>
-    <li><a href="3.html">WORK SCOPE</a></li>
-    <li><a href="4.html">CONTACT</a></li>
+  <h1>
+    <a href="1.html">
+      <span>성</span><span>영</span><span>미</span><span>디</span><span>어</span>
+    </a>
+  </h1>
+  <ul id="line">
+    <li class="B"><a href="1.html">ABOUT US</a></li>
+    <li id="A"><a href="2.html">REFERENCE</a></li>
+    <li class="B"><a href="3.html">WORK SCOPE</a></li>
+    <li class="B"><a href="4.html">CONTACT</a></li>
   </ul>
 
   <h3>REFERENCE</h3>
