--- a/2.html
+++ b/2.html
@@ -3,8 +3,8 @@
 <head>
   <title>SUNGYUNG MEDIA</title>
   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS.css">
 </head>
 
 
@@ -26,6 +26,15 @@
   <p>
   성영미디어와 함께한 작품들은 아래와 같습니다.
   </p>
+    <div class="REFERENCE">
+      1번
+    </div>
+    <div class="REFERENCE">
+      2번
+    </div>
+    <div class="REFERENCE">
+      3번
+    </div>
   <p>
 <iframe width="640" height="376.5" src="https://www.youtube.com/embed/lRfAuzU4lp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
