--- a/1.html
+++ b/1.html
@@ -14,13 +14,16 @@
       <span>성</span><span>영</span><span>미</span><span>디</span><span>어</span>
     </a>
   </h1>
-  <ul id="line">
-    <li id="A"><a href="1.html">ABOUT US</a></li>
-    <li class="B"><a href="2.html">REFERENCE</a></li>
-    <li class="B"><a href="3.html">WORK SCOPE</a></li>
-    <li class="B"><a href="4.html">CONTACT</a></li>
-  </ul>
-
+  <p class="list">
+    <div >
+      <ul id="line">
+        <li id="A"><a href="1.html">ABOUT US</a></li>
+        <li class="B"><a href="2.html">REFERENCE</a></li>
+        <li class="B"><a href="3.html">WORK SCOPE</a></li>
+        <li class="B"><a href="4.html">CONTACT</a></li>
+      </ul>
+    </div>
+  </p>
   <h3>ABOUT US</h3>
   <p>
   영상 매체의 역할이 나날이 커져가는 가운데
