--- a/2.html
+++ b/2.html
@@ -15,28 +15,31 @@
       <span>성</span><span>영</span><span>미</span><span>디</span><span>어</span>
     </a>
   </h1>
-  <ul id="line">
-    <li class="B"><a href="1.html">ABOUT US</a></li>
-    <li id="A"><a href="2.html">REFERENCE</a></li>
-    <li class="B"><a href="3.html">WORK SCOPE</a></li>
-    <li class="B"><a href="4.html">CONTACT</a></li>
-  </ul>
-
+  <div class="list">
+    <ul id="line">
+      <li class="B"><a href="1.html">ABOUT US</a></li>
+      <li id="A"><a href="2.html">REFERENCE</a></li>
+      <li class="B"><a href="3.html">WORK SCOPE</a></li>
+      <li class="B"><a href="4.html">CONTACT</a></li>
+    </ul>
+  </div>
   <h3>REFERENCE</h3>
   <p>
   성영미디어와 함께한 작품들은 아래와 같습니다.
   </p>
-    <div class="REFERENCE">
-      1번
-    </div>
-    <div class="REFERENCE">
-      2번
-    </div>
-    <div class="REFERENCE">
-      3번
-    </div>
+   <div class="Ref">
+     <div class="Ref_window">1번
+       <button class="Ref_click">클릭</button>
+     </div>
+     <div class="Ref_window">2번
+       <button type="button" name="button" class="Ref_click">클릭</button>
+     </div>
+     <div class="Ref_window">3번
+       <button type="button" name="button" class="Ref_click">클릭</button>
+     </div>
+   </div>
   <p>
-<iframe width="640" height="376.5" src="https://www.youtube.com/embed/lRfAuzU4lp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="640" height="376.5" src="https://www.youtube.com/embed/lRfAuzU4lp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
 </body>
 </html>
