--- a/3.html
+++ b/3.html
@@ -15,13 +15,14 @@
       <span>성</span><span>영</span><span>미</span><span>디</span><span>어</span>
     </a>
   </h1>
-  <ul id="line">
-    <li class="B"><a href="1.html">ABOUT US</a></li>
-    <li class="B"><a href="2.html">REFERENCE</a></li>
-    <li id="A"><a href="3.html">WORK SCOPE</a></li>
-    <li class="B"><a href="4.html">CONTACT</a></li>
-  </ul>
-
+  <div class="list">
+    <ul id="line">
+      <li class="B"><a href="1.html">ABOUT US</a></li>
+      <li class="B"><a href="2.html">REFERENCE</a></li>
+      <li id="A"><a href="3.html">WORK SCOPE</a></li>
+      <li class="B"><a href="4.html">CONTACT</a></li>
+    </ul>
+  </div>
   <h3>WORK SCOPE</h3>
   <table border="2">
     <thead>
