--- a/4.html
+++ b/4.html
@@ -15,13 +15,16 @@
       <span>성</span><span>영</span><span>미</span><span>디</span><span>어</span>
     </a>
   </h1>
-  <ul id="line">
-    <li class="B"><a href="1.html">ABOUT US</a></li>
-    <li class="B"><a href="2.html">REFERENCE</a></li>
-    <li class="B"><a href="3.html">WORK SCOPE</a></li>
-    <li id="A"><a href="4.html">CONTACT</a></li>
-  </ul>
-
+  <p class="list">
+    <div>
+        <ul id="line">
+          <li class="B"><a href="1.html">ABOUT US</a></li>
+          <li class="B"><a href="2.html">REFERENCE</a></li>
+          <li class="B"><a href="3.html">WORK SCOPE</a></li>
+          <li id="A"><a href="4.html">CONTACT</a></li>
+        </ul>
+    </div>
+  </p>
   <h3>CONTACT</h3>
   <p>
     <성영미디어> <br>
