--- a/2.html
+++ b/2.html
@@ -7,39 +7,43 @@
   <link rel="stylesheet" href="CSS.css">
 </head>
 
+<nav>
+  <ul id="contents">
+    <li class="B"><a href="1.html">ABOUT US</a></li>
+    <li id="A"><a href="2.html">REFERENCE</a></li>
+    <li class="B"><a href="3.html">WORK SCOPE</a></li>
+    <li class="B"><a href="4.html">CONTACT</a></li>
+  </ul>
+</nav>
 
 <body>
-    <a href="1.html"><img src="SUNGYUNG MEDIA LOGO.png" alt="성영미디어" width=15% title="성영미디어"></a>
-  <h1>
+  <h2>
     <a href="1.html">
       <span>성</span><span>영</span><span>미</span><span>디</span><span>어</span>
     </a>
-  </h1>
-  <div class="list">
-    <ul id="line">
-      <li class="B"><a href="1.html">ABOUT US</a></li>
-      <li id="A"><a href="2.html">REFERENCE</a></li>
-      <li class="B"><a href="3.html">WORK SCOPE</a></li>
-      <li class="B"><a href="4.html">CONTACT</a></li>
-    </ul>
-  </div>
+  </h2>
+
   <h3>REFERENCE</h3>
   <p>
   성영미디어와 함께한 작품들은 아래와 같습니다.
   </p>
    <div class="Ref">
-     <div class="Ref_window">1번
-       <button class="Ref_click">클릭</button>
+     <div class="Ref_window">단편 영화
+       <button class="Ref_click">재생</button>
      </div>
-     <div class="Ref_window">2번
-       <button type="button" name="button" class="Ref_click">클릭</button>
+     <div class="Ref_window">캠페인
+       <button type="button" name="button" class="Ref_click">재생</button>
      </div>
-     <div class="Ref_window">3번
-       <button type="button" name="button" class="Ref_click">클릭</button>
+     <div class="Ref_window">이벤트
+       <button type="button" name="button" class="Ref_click">재생</button>
      </div>
    </div>
   <p>
     <iframe width="640" height="376.5" src="https://www.youtube.com/embed/lRfAuzU4lp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
 </body>
+<a href="1.html"><img src="SUNGYUNG MEDIA LOGO.png" alt="성영미디어" width=15% title="성영미디어"></a>
+
+
+
 </html>
