--- a/3.html
+++ b/3.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="CSS.css">
 </head>
 
-
-<body>
-    <a href="1.html"><img src="SUNGYUNG MEDIA LOGO.png" alt="성영미디어" width=15% title="성영미디어"></a>
-  <h1>
-    <a href="1.html">
-      <span>성</span><span>영</span><span>미</span><span>디</span><span>어</span>
-    </a>
-  </h1>
-  <div class="list">
-    <ul id="line">
+<nav>
+    <ul id="contents">
       <li class="B"><a href="1.html">ABOUT US</a></li>
       <li class="B"><a href="2.html">REFERENCE</a></li>
       <li id="A"><a href="3.html">WORK SCOPE</a></li>
       <li class="B"><a href="4.html">CONTACT</a></li>
     </ul>
-  </div>
+</nav>
+
+<body>
+  <h2>
+    <a href="1.html">
+      <span>성</span><span>영</span><span>미</span><span>디</span><span>어</span>
+    </a>
+  </h2>
+
   <h3>WORK SCOPE</h3>
   <table border="2">
     <thead>
