--- a/1.html
+++ b/1.html
@@ -7,30 +7,29 @@
   <link rel="stylesheet" href="CSS.css">
 </head>
 
+<nav>
+  <ul id="contents">
+    <li id="A"><a href="1.html">ABOUT US</a></li>
+    <li class="B"><a href="2.html">REFERENCE</a></li>
+    <li class="B"><a href="3.html">WORK SCOPE</a></li>
+    <li class="B"><a href="4.html">CONTACT</a></li>
+  </ul>
+</nav>
+
 <body>
-    <a href="1.html"><img src="SUNGYUNG MEDIA LOGO.png" alt="성영미디어" width=15% title="성영미디어"></a>
-  <h1>
+  <h2>
     <a href="1.html">
       <span>성</span><span>영</span><span>미</span><span>디</span><span>어</span>
     </a>
-  </h1>
-  <p class="list">
-    <div >
-      <ul id="line">
-        <li id="A"><a href="1.html">ABOUT US</a></li>
-        <li class="B"><a href="2.html">REFERENCE</a></li>
-        <li class="B"><a href="3.html">WORK SCOPE</a></li>
-        <li class="B"><a href="4.html">CONTACT</a></li>
-      </ul>
-    </div>
-  </p>
+  </h2>
+
   <h3>ABOUT US</h3>
   <p>
   영상 매체의 역할이 나날이 커져가는 가운데
   고객이 원하는 최적의 영상 솔루션을 제공합니다.
   </p>
   <p>
-   <img src="솜금순.jpg" alt="솜금순" width=45% title="솜금순">
+    <img src="솜금순.jpg" alt="솜금순" width=45% title="솜금순">    
   </p>
 </body>
 
