--- a/3.html
+++ b/3.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
 </head>
 
 <nav>
@@ -47,7 +48,7 @@
       </tr>
     </tfoot>
   </table>
-  <p>
+  <p class="페이지">
   특별한 기획과 추억을 영상으로 만들어 보세요 <br>
   </p>
   <p>
@@ -98,6 +99,7 @@
         <textarea name="요청사항" rows="8" cols="80">요청 작업 관련 내용을 최대한 상세하게 기재해 주세요^^</textarea> </p>
       </label>
     <p>
+      <input type="button" value="클릭" onclick="alert('준비 중')">
       <input type="hidden" name="hide" value="견적 의뢰">
       <input type="submit" name="제출" value="견적 의뢰">
       <input type="reset" name="초기화" value="선택 초기화">
