--- a/4.html
+++ b/4.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
 </head>
 
 <nav>
@@ -24,7 +25,7 @@
   </h2>
 
   <h3>CONTACT</h3>
-  <p>
+  <p class="페이지">
     <성영미디어> <br>
     ■ 이메일 : sungyungmedia@gmail.com <br>
     ■ 카카오톡 : sungyungmedia@gmail.com <br>
