--- a/1.html
+++ b/1.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="CSS.css">
+  <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
 </head>
 
 <nav>
@@ -24,12 +25,12 @@
   </h2>
 
   <h3>ABOUT US</h3>
-  <p>
+  <p class="페이지">
   영상 매체의 역할이 나날이 커져가는 가운데
   고객이 원하는 최적의 영상 솔루션을 제공합니다.
   </p>
   <p>
-    <img src="솜금순.jpg" alt="솜금순" width=45% title="솜금순">    
+    <img src="솜금순.jpg" alt="솜금순" width=45% title="솜금순">
   </p>
 </body>
 
